--- a/src/common/translation/locales/en/user.json
+++ b/src/common/translation/locales/en/user.json
@@ -1,4 +1,4 @@
 {
-  "CREATED": "Campaign created successfully",
-  "NOT_FOUND": "Campaign not found"
+  "CREATED": "User created successfully",
+  "NOT_FOUND": "User not found"
 }
