create a banner module

--- a/src/common/translation/locales/en/user.json
+++ b/src/common/translation/locales/en/user.json
@@ -1,4 +1,5 @@
 {
   "CREATED": "User created successfully",
-  "NOT_FOUND": "User not found"
+  "NOT_FOUND": "User not found",
+  "ROLE": "you arenot partner"
 }
