--- a/src/common/translation/locales/en/partner.json
+++ b/src/common/translation/locales/en/partner.json
@@ -3,5 +3,6 @@
   "UPDATED": "Partner updated successfully",
   "DELETED": "Partner deleted successfully",
   "NOT_FOUND": "Partner not found",
+  "NOT_PARTNER": "you arenot partner in this campaign",
   "NOT_FOUNDS": "Partners not found"
 }
