--- a/src/common/translation/locales/en/user.json
+++ b/src/common/translation/locales/en/user.json
@@ -1,5 +1,17 @@
 {
-  "CREATED": "User created successfully",
+  "CREATED": "User Signup successfully",
+  "LOGIN": "User Lohin successfully",
+  "UPDATED": "User updated successfully",
+  "DELETED": "User deleted successfully",
+  "NOT_ADMIN": "User not admin",
+  "END_EMAIL": "User must be endend by @gmailcom",
   "NOT_FOUND": "User not found",
+  "EMAIL_USED": "Email is used",
+  "EMAIL_WRONG": "Email is Wrong",
+  "SANE_PASSWORD": "you enter same password",
+  "USERNAME_USED": "Username is used",
+  "UPDATE_PASSWORD": "your password is updated successfully",
+  "SEND_MSG": "Message sent successfully for your gmail",
+  "OLD_IS_EQUAL_NEW": "old password is equal to new password",
   "ROLE": "you arenot partner"
 }
