--- a/src/common/translation/locales/ar/user.json
+++ b/src/common/translation/locales/ar/user.json
@@ -1,3 +1,20 @@
 {
-  "CREATED": "تم إنشاء الحملة بنجاح"
+  "CREATED": "تم تسجيل المستخدم بنجاح",
+  "LOGIN": "تم تسجيل دخول المستخدم بنجاح",
+  "UPDATED": "تم تحديث المستخدم بنجاح",
+  "DELETED": "تم حذف المستخدم بنجاح",
+  "NOT_ADMIN": "المستخدم ليس مسؤولًا",
+  "END_EMAIL": "يجب أن ينتهي البريد الإلكتروني بـ @gmail.com",
+  "NOT_FOUND": "لم يتم العثور على المستخدم",
+  "EMAIL_USED": "البريد الإلكتروني مستخدم بالفعل",
+  "EMAIL_WRONG": "البريد الإلكتروني غير صحيح",
+  "SANE_PASSWORD": "لقد أدخلت نفس كلمة المرور",
+  "USERNAME_USED": "اسم المستخدم مستخدم بالفعل",
+  "UPDATE_PASSWORD": "تم تحديث كلمة المرور بنجاح",
+  "SEND_MSG": "تم إرسال الرسالة إلى بريدك الإلكتروني بنجاح",
+  "NO_TOKEN": "لا يوجد رمز",
+  "INVALID_TOKEN": "رمز غير صالح",
+  "INVALID_TOKEN_PAYLOAD": "بيانات الرمز غير صالحة",
+  "OLD_IS_EQUAL_NEW": "كلمة المرور القديمة تساوي كلمة المرور الجديدة",
+  "ROLE": "أنت لست شريكًا"
 }
