--- a/src/common/translation/locales/ar/comment.json
+++ b/src/common/translation/locales/ar/comment.json
@@ -2,7 +2,7 @@
   "CREATED": "تم إنشاء التعليق بنجاح",
   "UPDATED": "تم تحديث التعليق بنجاح",
   "DELETED": "تم حذف التعليق بنجاح",
-  "NOT_FOUND": "التعليق غير موجود",
+  "NOT_FOUND": "التعلفيات غير موجود",
   "NOT_FOUNDS": "لم يتم العثور على تعليقات",
   "COMMENTNOTEQUALUSERID": "التعليق لا ينتمي إلى المستخدم"
 }
